# nfs-gaze

./: .gitignore  BUILD_FOR_YOUR_DIST.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  OBSERVABILITY.md  README.md  RUST_MIGRATION_SPEC.md  TESTING.md  coverage.html  coverage.out  display_test.go  go.mod  main.cover  main.go  main_test.go  main_unsupported.go  nfs-gaze  nfs-gaze.go  nfs-gazer  stats.go  stats_nolinux.go  stats_test.go  types.go  utils.go  utils_nolinux.go  utils_test.go
coverage/: README.md
examples/: otel-collector.yml  prometheus.yml  prometheus_demo.rs
scripts/: coverage.sh
src/: cli.rs  display.rs  lib.rs  main.rs  metrics.rs  monitor.rs  parser.rs  stats.rs  types.rs
tests/: COVERAGE.md  README.md  TESTING.md  cli_test.rs  coverage_to_md.go  display_test.rs  stats_test.rs
