[package]
name = "nfs-gaze"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "NFS I/O Statistics Monitor"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
signal-hook = "0.3"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "nfs-gaze"
path = "src/main.rs"

[lib]
name = "nfs_gaze"
path = "src/lib.rs"