[package]
name = "nfs-gaze"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "NFS I/O Statistics Monitor"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
signal-hook = "0.3"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }

# Observability dependencies (optional)
prometheus = { version = "0.13", optional = true }
opentelemetry = { version = "0.21", optional = true }
opentelemetry-prometheus = { version = "0.14", optional = true }
opentelemetry_sdk = { version = "0.21", optional = true }
hyper = { version = "1.0", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "nfs-gaze"
path = "src/main.rs"

[lib]
name = "nfs_gaze"
path = "src/lib.rs"

[features]
default = []
prometheus = ["dep:prometheus", "dep:hyper", "dep:tower", "dep:tower-http"]
opentelemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-prometheus"]
observability = ["prometheus", "opentelemetry"]